--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -299,7 +299,7 @@
              </div>
              
              <div class="modal-body">
-                   <div class="row block">
+                   <!-- <div class="row block">
                        <div class="row">
    
                        <div class="col-md-2">
@@ -339,9 +339,78 @@
                          
                         </div>
                      </div>
-                     </div>
-                    
-           
+                     </div> -->
+                     <div class="row col-md-12">
+                      <div class="row col-md-6">
+                     <section class="lis-bg-light">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              
+                          
+                          <div class="row">
+                              <div class="col-12 wow fadeInUp mb-5  text-center" style="visibility: visible; animation-name: fadeInUp;">
+                                  <div class="price-table">
+                                      <div class="price-header lis-bg-light lis-rounded-top py-4 border border-bottom-0 lis-brd-light">
+                                          <article class="article">
+                                              <div class="col-md-3" class="article__content">
+                                                  <h6>Device Info</h6>
+                                              </div>
+                                          </article>
+                                      </div>
+                                      <div class="border border-top-0 lis-brd-light bg-white py-2 lis-rounded-bottom">
+                                          <ul class="list-unstyled lis-line-height-3">
+                                              <li> <b><b>Identification: </b></b>  {{viewDevice?.deviceId}}</li>
+                                              <li><b><b>Nom:</b></b>  {{viewDevice?.deviceName}}</li>
+                                              <li><b><b>firmwareVersion:</b></b>  {{viewDevice?.firmwareVersion}}</li>
+                                              <li><b><b>lastStartTime:</b></b>  {{viewDevice?.lastStartTime}}</li>
+                                             
+                                          </ul> 
+                                          
+                                      
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      </div>
+                  </section>
+                </div>
+                  <div class="row col-md-6">
+                     <section class="lis-bg-light">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              
+                          
+                          <div class="row">
+                              <div class="col-12 wow fadeInUp mb-5  text-center" style="visibility: visible; animation-name: fadeInUp;">
+                                  <div class="price-table">
+                                      <div class="price-header lis-bg-light lis-rounded-top py-4 border border-bottom-0 lis-brd-light">
+                                          <article class="article">
+                                              <div class="col-md-3" class="article__content">
+                                                  <h6>Device Info</h6>
+                                              </div>
+                                          </article>
+                                      </div>
+                                      <div class="border border-top-0 lis-brd-light bg-white py-2 lis-rounded-bottom">
+                                          <ul class="list-unstyled lis-line-height-3">
+                                              <li> <b><b>rtcTime: </b></b>  {{viewDevice?.rtcTime}} </li>
+                                              <li><b><b>powerVoltage:</b></b>  {{viewDevice?.powerVoltage}}</li>
+                                              <li><b><b>deviceIMEI:</b></b>  {{viewDevice?.deviceIMEI}}</li>
+                                              <li><b><b>externalStorage:</b></b>  {{viewDevice?.externalStorage}}</li>
+                                              <li><b><b>batteryVoltage: </b></b>  {{viewDevice?.batteryVoltage}}</li>
+                                             
+                                          </ul> 
+                                          
+                                      
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      </div>
+                  </section>
+                </div>
+              </div>
                      
                     
                   
