--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -46,7 +46,7 @@
               <div>
               <div class="col-sm-4">
                    <a class="btn big-login" data-toggle="modal" href="javascript:void(0)" (click)="openLoginModal();">Log in</a>
-                   <a class="btn big-register" data-toggle="modal" href="javascript:void(0)" (click)="openRegisterModal();">Register</a>
+                   <!-- <a class="btn big-register" data-toggle="modal" href="javascript:void(0)" (click)="openRegisterModal();">Register</a> -->
               </div>
               <div class="col-sm-4"></div>
           </div>
@@ -176,7 +176,7 @@
                       <div class="modal-footer">
                           <div class="forgot login-footer">
                               <span>
-                                   <button  type="submit" class="btn btn-info pull-right" (click)="showRegisterForm();">create an account</button>
+                                   <!-- <button  type="submit" class="btn btn-info pull-right" (click)="showRegisterForm();">create an account</button> -->
                               </span>
                           </div>
                           <div class="forgot register-footer" style="display:none">
