--- a/src/app/map-leaflet/map-leaflet.component.html
+++ b/src/app/map-leaflet/map-leaflet.component.html
@@ -64,7 +64,7 @@
                   <img  class="image col-md-3" [src]="makeImageUrl(vehicules[i])">
                     
                     <div class="col-md-9">
-                      <div class="name col-md-12" > {{vehicules[i]?.serialNumber}} {{vehicules[i]?.model}} </div>
+                      <div class="name col-md-12" > {{vehicules[i]?.model}} </div>
 
                       <div class="status col-md-12">
                         <!-- <div class="icon off"> </div> -->
